--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Static Index html</title>
+    <script type="text/javascript" src="/public/js/common.js"></script>
 </head>
 <body>
-
+    <p>Static Index HTML: public/index.html</p>
 </body>
 </html>
